syntax = "proto3";
package org.example.proto;
option java_multiple_files = true;

message AddNodeRequest {
  string id = 1;
  string ip = 2;
  int32 port = 3;
}

message DeleteNodeRequest {
  string id = 1;
}

// 0: success, -1: failure, 1: node is exiting the network
message Response {
  int32 code = 1;
}

service NetworkTopologyService {
  rpc addNode(AddNodeRequest) returns (Response);
  rpc deleteNode(DeleteNodeRequest) returns (Response);
}